feat: add tasks API
